Write Chapters 11-22: Immutable through Module System — Phase 1 complete
Finishes Phase 1 Foundation (22/22 chapters). Second arc covers: designing
immutable classes correctly (defensive copy, the "immutable but not really"
trap), the equals()/hashCode() contract pair (symmetric violation, then the
HashSet consequence), a synthesis chapter tying static/instance
initialization order together, checked vs unchecked exceptions, generics
type erasure, enum as a compiled singleton class, annotations + retention
policy, reflection, classic java.io vs java.nio, and closing with the Module
System — which resolves two threads left open since Chapter 02 (why JRE
stopped shipping standalone) and Chapter 19 (why setAccessible() started
failing on Java 9+).

Every runnable example and every claimed error message was executed against
JDK 17 locally, not reconstructed from memory:
- Ch11: real defensive-copy demo (List.copyOf, UnsupportedOperationException)
- Ch12: real symmetric-violation demo (a.equals(b) != b.equals(a))
- Ch13: real HashSet duplicate demo (size 2 vs 1 with/without hashCode)
- Ch14: real static/instance/constructor ordering trace, numbers matched
  the prediction exactly
- Ch15: real finally-swallows-exception and finally-overwrites-return traps
- Ch16: real type erasure evidence (getClass() equality + javap bytecode
  showing erasure to Object)
- Ch17: real enum compiled structure via javap (extends java.lang.Enum,
  singleton constants, synthesized values()/valueOf())
- Ch18: real RetentionPolicy demo (only RUNTIME survives to reflection)
- Ch19: real private+final field mutation via Reflection
- Ch20: real buffered vs unbuffered I/O timing (~5.5x)
- Ch21: real NIO.2 Files/Path and Channel/ByteBuffer demos
- Ch22: real module compile/run, and the exports-without-opens
  InaccessibleObjectException reproduced then fixed — a direct callback to
  Chapter 19's Production Notes

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>